--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-    "name": "online-radio",
-    "version": "2.0.5",
+    "name": "chrome-whatsapp",
+    "version": "1.0.0",
     "dependencies": {},
     "devDependencies": {
         "grunt": "^0.4.1",
