--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "chrome-whatsapp",
+    "name": "whatsapp",
     "version": "1.0.1",
     "dependencies": {},
     "devDependencies": {
