--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "grunt-contrib-compress": "^0.12.0",
         "grunt-contrib-copy": "^0.5.0",
         "grunt-contrib-imagemin": "^0.7.1",
+        "grunt-contrib-jshint": "^0.9.2",
         "jshint-stylish": "^0.1.5",
         "load-grunt-tasks": "^0.4.0",
         "time-grunt": "^0.3.1"
