--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
         "grunt-contrib-clean": "^0.5.0",
         "grunt-contrib-compress": "^0.12.0",
         "grunt-contrib-copy": "^0.5.0",
+        "grunt-contrib-htmlmin": "^0.2.0",
         "grunt-contrib-imagemin": "^0.7.1",
+        "grunt-contrib-uglify": "^0.4.0",
         "grunt-contrib-jshint": "^0.9.2",
+        "grunt-contrib-sass": "^0.8.1",
         "jshint-stylish": "^0.1.5",
         "load-grunt-tasks": "^0.4.0",
         "time-grunt": "^0.3.1"
