--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
         "grunt-contrib-uglify": "^0.4.0",
         "grunt-contrib-jshint": "^0.9.2",
         "grunt-contrib-sass": "^0.8.1",
+        "grunt-contrib-connect": "^0.7.1",
+        "grunt-contrib-watch": "^0.6.1",
         "jshint-stylish": "^0.1.5",
         "load-grunt-tasks": "^0.4.0",
         "time-grunt": "^0.3.1"
