--- a/app/manifest.json
+++ b/app/manifest.json
@@ -4,21 +4,25 @@
     "description": "__MSG_description__",
     "manifest_version": 2,
     "default_locale": "en",
+    "minimum_chrome_version": "36.0",
     "app": {
         "background": {
             "scripts": [ "scripts/background.js" ]
         }
     },
     "permissions": [
-        "webview",
-        "https://web.whatsapp.com/"
+        "audio",
+        "audioCapture",
+        "videoCapture",
+        "notifications",
+        "webview"
     ],
     "icons": {
         "16": "images/16.png",
         "19": "images/19.png",
         "38": "images/38.png",
-        "48": "images/48.png",
         "128": "images/128.png",
-        "256": "images/256.png"
+        "256": "images/256.png",
+        "512": "images/512.png"
     }
 }
