--- a/app/manifest.json
+++ b/app/manifest.json
@@ -15,6 +15,7 @@
         "audioCapture",
         "videoCapture",
         "notifications",
+        "fileSystem",
         "webview"
     ],
     "icons": {
