--- a/app/manifest.json
+++ b/app/manifest.json
@@ -1,6 +1,7 @@
 {
     "version": "1.0.9",
     "name": "__MSG_name__",
+    "short_name": "__MSG_name__",
     "description": "__MSG_description__",
     "manifest_version": 2,
     "default_locale": "en",
