--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "grunt-contrib-sass": "^1.0.0",
         "grunt-contrib-connect": "^0.11.2",
         "grunt-contrib-watch": "^1.0.0",
+        "grunt-notify": "^0.4.1",
         "jshint-stylish": "^2.2.1",
         "load-grunt-tasks": "^3.5.2",
         "time-grunt": "^1.4.0"
